.opam/default/.opam-switch/sources/sail_ocaml_backend.0.20.1/test/typecheck/fail/double_struct_update.sail
default Order dec

$include <prelude.sail>

struct S = {
  field : int
}

function main() -> unit = {
  let x : S = struct { field = 3 };
  let x = { x with field = 4, field = 5 };
  print_int("x.field = ", x.field)
}
